workbench i18n ui issue fixed

--- a/findly-builder/src/app/components/index/index.component.html
+++ b/findly-builder/src/app/components/index/index.component.html
@@ -262,7 +262,7 @@
                 <div class="kr-sg-input-text col-4 input-box"
                   *ngIf="map.operation === 'copy' || map.operation === 'rename'">
                   <div class="label-text" *ngIf="map.operation === 'copy'">
-                    {{'workbench.source_field' | translate}
+                    {{'workbench.source_field' | translate}}
                   </div>
                   <div class="label-text" *ngIf="map.operation === 'rename'">
                     {{'workbench.field_name' | translate}}
