--- a/findly-builder/src/app/components/settings/settings.component.html
+++ b/findly-builder/src/app/components/settings/settings.component.html
@@ -49,7 +49,7 @@
                             <!-- <li (click)="disableCredential()"><a (click)="enableConfiguration = !enableConfiguration"> Disable</a></li> 
                             <li *ngIf="!enableConfiguration = enableConfiguration" (click)="configureCredential()"><a> Enable</a></li>  -->
                             <!-- <li><a (click)="enableConfiguration = !enableConfiguration) ? disableCredential()">Enaable</a></li> -->
-                            <li class="d-none"><a>{{"settings.delete" | translate}} </a></li>               
+                            <li (click) = "deleteChannel()"><a>{{"settings.delete" | translate}} </a></li>               
                         </ul>
                     </div>
                 </div>
