--- a/findly-builder/src/app/components/facets/facets.component.scss
+++ b/findly-builder/src/app/components/facets/facets.component.scss
@@ -487,7 +487,7 @@
     }
     .modal-body {
         .search_block {
-            padding-bottom: 25px;
+            padding-bottom: 18px;
             border-bottom: 1px solid #f5f5f5;
             .scroll-search-field {                
                 max-height: 300px;
@@ -520,7 +520,7 @@
         }
         .row-content {
             align-items: center;
-            margin: 28px 0;
+            margin: 18px 0 28px 0;
             .checkbox-content {
                 position: relative;
                 top: 12px;
