FLY-2634 and FLY-2635 issues fixed

--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -2,8 +2,49 @@
 <div class="sidebar-fixed position-fixed activeMenu" *ngIf="show">
 	<ng-container *ngIf="!settingMainMenu && !sourceMenu || sourceMenu">
 		<div class="upgrade_your_plan_price" [ngClass]="{'d-none':showUpgrade}">
+			<span class="status-type"></span>
 			<div class="upgrade-plan-btn" (click)="upgrade()">Upgrade Your Plan<img src="assets/icons/pricing/carrotright.svg"></div>
-			<div class="document-limit" *ngIf="usageDetails?.ingestDocs<80">{{usageDetails.ingestDocs}}%  document limit reached
+
+			<div class="hover-documnet-show-data">
+				<div class="card-data-">
+					<div class="img-block">
+						<img src="assets/icons/pricing/query-limits.svg">
+					</div>
+					<div class="content-sec">
+						<div class="title">Query limit</div>
+						<div class="desc-text">Percentage of queries asked by the user</div>
+						<div class="count-data">
+							<div class="linit-k">
+								<span>11k</span> / 50K 
+							</div>
+							<div class="percentage">22% </div>
+						</div>						
+					</div>
+					<ng-container *ngIf="usageDetails?.ingestDocs<80">
+						<ngb-progressbar height="10px" type="primary" [value]="usageDetails?.ingestDocs" max="100"></ngb-progressbar>
+					</ng-container>
+					<ng-container *ngIf="usageDetails?.searchQueries<80">
+						<ngb-progressbar class="query-limited-reached" height="10px" type="primary" [value]="usageDetails?.searchQueries" max="100"></ngb-progressbar>
+					</ng-container>					
+				</div>
+				<div class="card-data-">
+					<div class="img-block">
+						<img src="assets/icons/pricing/document-limit.svg">
+					</div>
+					<div class="content-sec">
+						<div class="title">Document limit</div>
+						<div class="desc-text">Percentage of documents ingested</div>
+						<div class="count-data">
+							<div class="linit-k">
+								<span>28k</span> / 50K 
+							</div>
+							<div class="percentage">56%</div>
+						</div>						
+					</div>
+				</div>
+			</div>
+
+			<!-- <div class="document-limit" *ngIf="usageDetails?.ingestDocs<80">{{usageDetails.ingestDocs}}%  document limit reached
 				<ngb-progressbar height="10px" type="primary" [value]="usageDetails?.ingestDocs" max="100"></ngb-progressbar>
 			</div>		
 			<div class="document-limit" *ngIf="usageDetails?.searchQueries<80">{{usageDetails.searchQueries}}%  query limit reached
@@ -14,7 +55,7 @@
 			</div>		
 			<div class="document-limit" *ngIf="usageDetails?.searchQueries>80">{{usageDetails.searchQueries}}%  query limit reached
 				<ngb-progressbar class="limit-exceed" height="10px" type="danger" [value]="usageDetails?.searchQueries" max="100"></ngb-progressbar>
-			</div>		
+			</div>		 -->
 		</div>
 	</ng-container>
 	<perfect-scrollbar class="perfect-scroll" [ngClass]='{"if-upgrade-plan":!showUpgrade}'>
