--- a/findly-builder/src/app/helpers/components/upgrade-plan/upgrade-plan.component.html
+++ b/findly-builder/src/app/helpers/components/upgrade-plan/upgrade-plan.component.html
@@ -3,7 +3,7 @@
     <div class="modal-header">
       <div class="title">{{"plan.choose_plan"| translate}}</div>
       <div class="d-flex align-items-center justify-content-end">
-        <div class="btn-monthly"  [ngClass]="{'active-btn' : termPlan == 'Monthly'}" (click)="typeOfPlan('Monthly')">{{"plan.monthly"| translate}}</div>
+        <div class="btn-monthly" [ngClass]="{'active-btn' : termPlan == 'Monthly'}" (click)="typeOfPlan('Monthly')">{{"plan.monthly"| translate}}</div>
         <div class="btn-monthly" [ngClass]="{ 'active-btn' : termPlan == 'Yearly' }" (click)="typeOfPlan('Yearly')">{{"plan.yearly"| translate}}</div>
         <div class="close_icon ml-4">
           <img  (click)="closeChoosePlanPopup()" src="assets/icons/modal-close.svg">
@@ -96,7 +96,13 @@
          <div class="order-confirmation-table-body row col-12 m-0"  *ngIf="!overageData.overageShow">
           <div class="col-9 plan_details">
             <div class="plan-type">{{orderConfirmData.name}} {{"plan.subscription"| translate}}</div>
-            <div class="btn-monthly"  [ngClass]="{'active-btn' : orderConfirmData.billingUnit == 'Monthly'}" (click)="orderConfirmData?.name==selectedPlan?.planName&&selectedPlan?.billingUnit == 'Monthly'?null:choosePlanType('Monthly')">{{"plan.monthly"| translate}}</div>
+            <!-- disable-text -->
+            <div class="btn-monthly" [ngClass]="{'active-btn' : orderConfirmData.billingUnit == 'Monthly'}" (click)="orderConfirmData?.name==selectedPlan?.planName&&selectedPlan?.billingUnit == 'Monthly'?null:choosePlanType('Monthly')">{{"plan.monthly"| translate}}
+              <span class="tooltip_top_">
+                <span (click)="openContactusModel()">Contact Us</span> if you want to change to monthly plan
+              </span>
+            </div>
+            <!-- btn-disable-active -->
             <div class="btn-monthly" [ngClass]="{ 'active-btn' : orderConfirmData.billingUnit == 'Yearly' }" (click)="orderConfirmData?.name==selectedPlan?.planName&&selectedPlan?.billingUnit == 'Yearly'?null:choosePlanType('Yearly')">{{"plan.yearly"| translate}}</div>
           </div>            
 
@@ -225,7 +231,7 @@
 </kr-modal>
 
 <!--contact us form popup-->
-<kr-modal modalType="center" modalClass="modal_popups_ contact-us-modal_" #contactUsModel>
+<kr-modal modalType="above-modal-drop" modalClass="modal_popups_ contact-us-modal_" #contactUsModel>
     <div class="left-sec-form">
       <div class="logo-searchassist">
         <img src="assets/icons/pricing/logo.svg">
